# HD-cli

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: calc_bench.rs
docs/superpowers/specs/: 2026-05-13-hd-cli-agent-skill-design.md
examples/: load_test.rs
locales/: en.yaml  es.yaml  ru.yaml
skills/hd-cli/scripts/: package.json
skills/hd-cli/scripts/src/: cli.ts  github_release.ts  hd_cli_run.ts  hd_compact.ts  install.ts  nlm_query.ts  platform.ts  utils.ts
skills/hd-cli/scripts/test/: npx.test.js
src/: astro_calc.rs  calc.rs  circuit_score.rs  cli.rs  config.rs  lib.rs  main.rs  models.rs
src/data/: centers.rs  channels.rs  database.rs  gates.rs  mod.rs
