[package]
name = "hd-cli"
version = "0.1.0"
edition = "2021"
description = "Human Design CLI — расчёт карты Дизайна Человека по дате/времени рождения"

[dependencies]
astro = { git = "https://github.com/nimblemo/astro-rust", branch = "master" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = "0.4"
comfy-table = "7"
colored = "2"
once_cell = "1"
textwrap = "0.16"
terminal_size = "0.3"
rayon = "1.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "calc_bench"
harness = false

[[bin]]
name = "hd-cli"
path = "src/main.rs"
